--- a/alittleprincess.html
+++ b/alittleprincess.html
@@ -20,7 +20,7 @@
     </h3>
     <img src="A young girl from a wealthy family who lived a comfortable life at a boarding school, but her life turned upside down due to her fathers death. Before she could accept her fathers death, the sponsorship was cut off, and she became .png" alt=맛의 원리">
     <li><h3>감상평에 대한 AI평가</h3></li>
-    <h3>~~~~AI평가~~~~~<br>
+    <h3>**《세라이야기》**를 무난하면서도 재미있게 읽었다는 인상을 받았어. 특히 주인공이 갑작스럽게 몰락하는 설정과 이후의 반전이 흥미로웠던 것 같아. 이 소설은 부유했던 주인공이 하루아침에 신분이 바뀌면서 겪는 감정의 변화와 성장 과정이 중요한 요소인데, 너는 이 부분을 어떻게 느꼈을까? 주인공이 상황을 극복하는 과정이 설득력 있었는지, 아니면 더 깊이 있게 다뤄졌으면 좋겠다고 생각했는지 궁금해! 또, 이 책이 단순한 성장 소설인지, 아니면 사회적인 메시지(계급, 부의 불평등 등)를 담고 있다고 느꼈는지도 한 번 생각해 보면 좋을 것 같아.<br>
         &#10024; ~~~~AI평가~~~~~<br>
         &#10024; ~~~~AI평가~~~~~<br>
         &#10024; ~~~~AI평가~~~~~<br>
