--- a/matilda.html
+++ b/matilda.html
@@ -20,7 +20,9 @@
     </h3>
     <img src="마틸다.png" alt=마틸다">
     <li><h3>감상평에 대한 AI평가</h3></li>
-    <h3>~~~~AI평가~~~~~<br>
+    <h3>**《마틸다》**를 판타지적인 요소 덕분에 재미있게 읽었지만, 현실적으로 보면 다소 어두운 내용이라고 느낀 것 같아.
+
+이 책은 가정에서 사랑받지 못하는 어린아이가 자신의 힘으로 삶을 바꿔나가는 이야기를 그리고 있어서, 단순한 아동 문학이 아니라 독립과 성장이라는 중요한 주제를 담고 있어. 특히, 마틸다가 초능력을 통해 스스로 문제를 해결하는 부분이 통쾌하게 느껴졌을 것 같아.<br>
         &#10024; ~~~~AI평가~~~~~<br>
         &#10024; ~~~~AI평가~~~~~<br>
         &#10024; ~~~~AI평가~~~~~<br>
