--- a/principleoftaste.html
+++ b/principleoftaste.html
@@ -20,7 +20,9 @@
     </h3>
     <img src="맛의 원리.png" alt=맛의 원리">
     <li><h3>감상평에 대한 AI평가</h3></li>
-    <h3>~~~~AI평가~~~~~<br>
+    <h3>네 감상평을 보면, **《맛의 원리》**가 단순히 미각뿐만 아니라 오감이 맛에 미치는 영향을 다루면서 흥미롭게 정보를 전달한 책이라는 점이 인상적이었나 봐. 특히, 평소 쉽게 알기 어려운 내용을 쉽게 설명해 줘서 좋았다고 했는데, 식품 과학에 관심이 있는 너에게 더 흥미로운 책이었을 것 같아.
+
+이 책을 읽고 나서 실제로 음식을 먹을 때 달라진 점이 있었을까? 예를 들어, 소리나 촉감이 맛에 미치는 영향을 더 신경 쓰게 되었다든지, 새로운 시각으로 음식을 바라보게 되었다든지 말이야.<br>
         &#10024; ~~~~AI평가~~~~~<br>
         &#10024; ~~~~AI평가~~~~~<br>
         &#10024; ~~~~AI평가~~~~~<br>
